Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-17890

WXP TaskMgr: each refresh triggers 3 'Assertion failed: UserIsEnteredExclusive()'

    XMLWordPrintable

Details

    Description

      QEMU 0.9.1

      –

      reactos-livecd-0.4.15-dev-3001-g8c098ee-x86-gcc-lin-dbg

      (/win32ss/user/winsrv/usersrv/init.c:152) GetThreadConsoleDesktop(1112) failed with Status 0xc0000008
      (/win32ss/user/winsrv/usersrv/init.c:152) GetThreadConsoleDesktop(1112) failed with Status 0xc0000008
      (/win32ss/user/winsrv/usersrv/init.c:152) GetThreadConsoleDesktop(1112) failed with Status 0xc0000008
      (/win32ss/user/winsrv/usersrv/init.c:152) GetThreadConsoleDesktop(1112) failed with Status 0xc0000008
      

      –

      reactos-livecd-0.4.15-dev-3456-g4a17d4b-x86-gcc-lin-dbg

      (/win32ss/user/winsrv/usersrv/init.c:152) GetThreadConsoleDesktop(1112) failed with Status 0xc0000008
       
      *** Assertion failed: UserIsEnteredExclusive()
      ***   Source File: /win32ss/user/ntuser/usrheap.h, line 37
       
      Break repeatedly, break Once, Ignore, terminate Process or terminate Thread (boipt)?
      kdb:> o
      Execute '.cxr FBDA77E0' to dump context
       
      Entered debugger on embedded INT3 at 0x0008:0x80589F89.
      kdb:> bt
      Eip:
      <ntoskrnl.exe:189f8a (srv/buildbot/worker_data/Build_GCCLin_x86/build/sdk/lib/rtl/i386/debug_asm.S:33 (DbgBreakPoint))>
      Frames:
      <win32k.sys:35728 (win32ss/user/ntuser/usrheap.h:37 (IntMapDesktopView))>
      <win32k.sys:36820 (win32ss/user/ntuser/desktop.c:210 (IntDesktopObjectOpen))>
      <ntoskrnl.exe:3bc46 (ntoskrnl/ex/win32k.c:97 (ExpWin32SessionCallout))>
      <ntoskrnl.exe:3bdcd (ntoskrnl/ex/win32k.c:230 (ExpDesktopOpen))>
      <ntoskrnl.exe:107dcc (ntoskrnl/ob/obhandle.c:994 (ObpIncrementHandleCount))>
      <ntoskrnl.exe:108e26 (ntoskrnl/ob/obhandle.c:1560 (ObpCreateHandle))>
      <ntoskrnl.exe:10a1c4 (ntoskrnl/ob/obhandle.c:2664 (ObOpenObjectByName))>
      <win32k.sys:39c6f (win32ss/user/ntuser/desktop.c:2553 (NtUserOpenDesktop))>
      <ntoskrnl.exe:3fe5 (:0 (KiSystemCallTrampoline))>
      <ntoskrnl.exe:14cf19 (ntoskrnl/ke/i386/traphdlr.c:1840 (KiSystemServiceHandler))>
      <ntoskrnl.exe:3e2f (:0 (KiFastCallEntry))>
      <ntdll.dll:10125>
      <taskmgr_xp.exe:ea03>
      <user32.dll:35a5a>
      <user32.dll:2c4ea>
      <taskmgr_xp.exe:ed51>
      <user32.dll:35a5a>
      <user32.dll:35c04>
      <taskmgr_xp.exe:d8f9>
      <kernel32.dll:1c8c7>
      kdb:> cont
       
      [...]
      

      —

      This ASSERT() was added in UserHeapAlloc() on 0.4.15-dev-3002-gd958dc9 by zefklop.

      It is catching an unupdated caller!

      Attachments

        Activity

          People

            Serge Gautherie Serge Gautherie
            Serge Gautherie Serge Gautherie
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: