[WIN32K:NTUSER] Make sure to hold User Global Lock before mapping desktop heap

Addendum to 0.4.15-dev-3001-g8c098ee.
CORE-17890